Fix link buttons sizing on mobile

--- a/src/pages/landing-mobile.styles.css
+++ b/src/pages/landing-mobile.styles.css
@@ -153,6 +153,14 @@
     color: rgb(224, 177, 255);
     padding: 0.4rem 2.5rem 0.4rem 2.5rem;
     font-family: "Jersey 10", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    i {
+      font-size: 1.2rem;
+      color: rgb(224, 177, 255);
+    }
   }
 
   .cv-button-sm {
@@ -165,6 +173,14 @@
     color: rgb(101, 1, 168);
     font-family: "Jersey 10", sans-serif;
     padding: 0 2.5rem 0 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    i {
+      font-size: 1.2rem;
+      color: rgb(101, 1, 168);
+    }
   }
 }
 
